--- a/src/main/resources/view/InsuranceProfile.fxml
+++ b/src/main/resources/view/InsuranceProfile.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="150.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<VBox id="insuranceCardPane" fx:id="insuranceCardPane" prefHeight="150.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <HBox prefHeight="40.0">
          <children>
