--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -46,7 +46,7 @@
                <items>
                   <StackPane minWidth="-Infinity" prefWidth="550.0">
                      <children>
-                        <VBox fx:id="personList" minWidth="-Infinity" prefWidth="550.0" style="-fx-border-color: white; -fx-border-width: 1.70;">
+                        <VBox fx:id="personList" minWidth="-Infinity" prefWidth="550.0">
                            <padding>
                               <Insets bottom="10" left="10" right="10" top="10" />
                            </padding>
@@ -129,10 +129,10 @@
       <!-- @@author Alim95 -->
       <ScrollPane fx:id="helpOverlay" fitToHeight="true" fitToWidth="true" opacity="0.9" prefHeight="200.0" prefWidth="200.0" visible="false" StackPane.alignment="TOP_CENTER">
          <content>
-            <GridPane alignment="TOP_CENTER" blendMode="SRC_ATOP" gridLinesVisible="true" minWidth="-Infinity" prefHeight="855.0" prefWidth="1249.0" style="-fx-background-color: white;">
+            <GridPane alignment="TOP_CENTER" blendMode="SRC_ATOP" gridLinesVisible="true" prefHeight="855.0" prefWidth="1249.0" style="-fx-background-color: white;">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="179.0" minWidth="0.0" prefWidth="178.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="1064.0" minWidth="10.0" prefWidth="1051.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="185.0" minWidth="0.0" prefWidth="178.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="1064.0" minWidth="10.0" prefWidth="541.0" />
               </columnConstraints>
               <rowConstraints>
                   <RowConstraints maxHeight="40.0" minHeight="32.0" prefHeight="32.0" vgrow="SOMETIMES" />
