--- a/src/main/resources/view/PersonInformationPanel.fxml
+++ b/src/main/resources/view/PersonInformationPanel.fxml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <VBox>
          <children>
@@ -35,11 +34,7 @@
                   <Label fx:id="phone" styleClass="label-bright" />
                </children>
             </HBox>
-            <HBox>
-               <children>
-                  <ListView fx:id="optionalPhoneList" layoutX="14.0" layoutY="21.0" prefHeight="40.0" prefWidth="300.0" />
-               </children>
-            </HBox>
+            <VBox fx:id="optionalPhoneList" prefHeight="0.0" prefWidth="400.0" />
             <HBox>
                <children>
                    <VBox minHeight="30" />
