--- a/src/main/resources/view/BrightTheme.css
+++ b/src/main/resources/view/BrightTheme.css
@@ -7,7 +7,7 @@
 .label {
     -fx-font-size: 11pt;
     -fx-font-family: "Segoe UI Semibold";
-    -fx-text-fill: orange;
+    -fx-text-fill: tomato;
     -fx-opacity: 0.9;
 }
 
@@ -141,7 +141,7 @@
 }
 
 .list-cell:filled:selected {
-    -fx-background-color: coral;
+    -fx-background-color: skyblue;
 }
 
 .list-cell:filled:selected #cardPane {
@@ -248,6 +248,7 @@
  * Author: Pedro Duque Vieira
  * http://pixelduke.wordpress.com/2012/10/23/jmetro-windows-8-controls-on-java/
  */
+ /*
 .button {
     -fx-padding: 5 22 5 22;
     -fx-border-color: #e2e2e2;
@@ -259,7 +260,7 @@
     -fx-text-fill: #d8d8d8;
     -fx-background-insets: 0 0 0 0, 0, 1, 2;
 }
-
+*/
 .button:hover {
     -fx-background-color: derive(orange, 50%);
 }
@@ -366,6 +367,7 @@
 
 #filterField, #personListPanel, #personWebpage {
     -fx-effect: innershadow(gaussian, black, 10, 0, 0, 0);
+    -fx-text-fill: white;
 }
 
 #resultDisplay .content {
@@ -382,6 +384,20 @@
 }
 
 #tags .label {
+    -fx-text-fill: white;
+    -fx-background-color: #3e7b91;
+    -fx-padding: 1 3 1 3;
+    -fx-border-radius: 2;
+    -fx-background-radius: 2;
+    -fx-font-size: 11;
+}
+
+#eventStatus {
+    -fx-hgap: 7;
+    -fx-vgap: 3;
+}
+
+#eventStatus  {
     -fx-text-fill: white;
     -fx-background-color: #3e7b91;
     -fx-padding: 1 3 1 3;
