Minor fixes and update Ui.png/ samepldatautil

--- a/src/main/resources/view/BlueTheme.css
+++ b/src/main/resources/view/BlueTheme.css
@@ -1,4 +1,5 @@
-.background {
+/* @@author limyongsong */
+  .background {
       -fx-background-color: derive(#E6ECF0, 0%);
       background-color: #ffffff; /* Used in the default.html file */
   }
