fixed parcel list size bug

--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefWidth="690.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<VBox xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
   <stylesheets>
     <URL value="@DarkTheme.css" />
     <URL value="@Extensions.css" />
@@ -44,7 +44,7 @@
           <Insets bottom="10" left="10" right="10" top="10" />
         </padding>
       </StackPane>
-     <StackPane fx:id="parcelListPanelPlaceholder" prefHeight="134.0" prefWidth="688.0" />
+     <StackPane fx:id="parcelListPanelPlaceholder" />
     </items>
   </SplitPane>
   <!-- @@author -->
