--- a/src/main/resources/view/ParcelListPanel.fxml
+++ b/src/main/resources/view/ParcelListPanel.fxml
@@ -5,18 +5,18 @@
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="240.0" prefWidth="1543.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<VBox xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
     <!-- @@author vicisapotato -->
-    <TabPane fx:id="tabPanePlaceholder" styleClass="tab-pane" tabClosingPolicy="UNAVAILABLE">
+    <TabPane fx:id="tabPanePlaceholder" prefHeight="1000.0" prefWidth="253.0" styleClass="tab-pane" tabClosingPolicy="UNAVAILABLE">
      <tabs>
-       <Tab fx:id="undeliveredParcelsTab" text="All Parcels">
+       <Tab fx:id="undeliveredParcelsTab" styleClass="tab-header-area" text="All Parcels">
             <content>
               <ListView fx:id="allUncompletedParcelListView" style="-fx-background-color: #383838;" />
             </content>
          </Tab>
        <Tab fx:id="deliveredParcelsTab" styleClass="tab-header-area" text="Completed Parcels">
             <content>
-               <ListView fx:id="allCompletedParcelListView" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #383838;" />
+               <ListView fx:id="allCompletedParcelListView" style="-fx-background-color: #383838;" />
             </content>
          </Tab>
      </tabs>
