--- a/src/main/resources/view/BlueTheme.css
+++ b/src/main/resources/view/BlueTheme.css
@@ -1,4 +1,9 @@
 /* @@author limyongsong */
+  /*
+   * DarkTheme
+   * Author: se-edu
+   * https://github.com/se-edu/addressbook-level4
+   */
   .background {
       -fx-background-color: derive(#E6ECF0, 0%);
       background-color: #ffffff; /* Used in the default.html file */
