--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -374,7 +374,7 @@
 
 #commandTextDefault {
     -fx-font-family: monospace;
-    -fx-font-size: 25t;
+    -fx-font-size: 25;
     -fx-text-fill: white;
 }
 
