--- a/src/main/resources/view/ScheduleCard.fxml
+++ b/src/main/resources/view/ScheduleCard.fxml
@@ -30,12 +30,12 @@
         </Label>
         <Label fx:id="activity" styleClass="cell_big_label" text="\\$Activity" />
       </HBox>
-      <Label styleClass="cell_small_label" text="Date:">
+      <Label fx:id="dateHeader" styleClass="cell_small_label" stylesheets="@ScheduleCardHeaders.css" text="Date:">
             <font>
                <Font name="System Bold" size="13.0" />
             </font></Label>
       <Label fx:id="date" styleClass="cell_small_label" text="\\$date" />
-         <Label text="Person(s) Involved:">
+         <Label fx:id="personsInvolvedHeader" stylesheets="@ScheduleCardHeaders.css" text="Person(s) Involved:">
             <font>
                <Font name="System Bold" size="13.0" />
             </font></Label>
