--- a/src/main/resources/view/ClearLogButton.fxml
+++ b/src/main/resources/view/ClearLogButton.fxml
@@ -3,4 +3,4 @@
 <?import javafx.scene.control.Button?>
 
 
-<Button fx:id="clearLogButton" mnemonicParsing="false" onAction="#handleClearLogButtonPressed" text="Clear Log" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" />
+<Button fx:id="clearLogButton" mnemonicParsing="false" onAction="#handleClearLogButtonPressed" text="Clear" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" />
