--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -39,17 +39,27 @@
   </StackPane>
     <SplitPane dividerPositions="0.5" prefHeight="101.0" prefWidth="1068.0">
       <items>
-          <StackPane fx:id="resultDisplayPlaceholder" maxHeight="100" maxWidth="-Infinity" minHeight="100" minWidth="-Infinity" prefHeight="100" prefWidth="903.0" styleClass="pane-with-border">
+          <StackPane fx:id="resultDisplayPlaceholder" maxHeight="100" maxWidth="-Infinity" minHeight="100" minWidth="-Infinity" prefHeight="100" prefWidth="849.0" styleClass="pane-with-border">
           <padding>
             <Insets bottom="5" left="10" right="10" top="5" />
           </padding>
         </StackPane>
-         <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="112.0" prefWidth="176.0">
+         <HBox prefHeight="100.0" prefWidth="200.0">
             <children>
-               <StackPane fx:id="clearLogButtonPlaceholder" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="53.0" prefWidth="161.0" />
-               <StackPane fx:id="qrButtonPlaceholder" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="56.0" prefWidth="187.0" />
+               <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="112.0" prefWidth="113.0">
+                  <children>
+                     <StackPane fx:id="clearLogButtonPlaceholder" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="59.0" prefWidth="114.0" />
+                     <StackPane fx:id="qrButtonPlaceholder" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="56.0" prefWidth="100.0" />
+                  </children>
+               </VBox>
+               <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="112.0" prefWidth="93.0">
+                  <children>
+                     <StackPane fx:id="qrSmsButtonPlaceholder" prefHeight="150.0" prefWidth="95.0" />
+                     <StackPane fx:id="qrSaveButtonPlaceholder" prefHeight="150.0" prefWidth="77.0" />
+                  </children>
+               </VBox>
             </children>
-         </VBox>
+         </HBox>
       </items>
    </SplitPane>
     <!-- @@author blaqkrow-->
