--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -132,6 +132,10 @@
     -fx-background-color: #515658;
 }
 
+.list-cell:filled:hover {
+    -fx-background-color: #5b6446;
+}
+
 .list-cell:filled:selected {
     -fx-background-color: #424d5f;
 }
