--- a/src/main/resources/view/BlueTheme.css
+++ b/src/main/resources/view/BlueTheme.css
@@ -86,24 +86,26 @@
 }
 
 .split-pane:horizontal .split-pane-divider {
-    -fx-background-color: derive(#0D47A1, 20%);
-    -fx-border-color: transparent transparent transparent #4d4d4d;
+    -fx-background-color: derive(#a4a5ab, 20%);
+    -fx-border-color: transparent #53587a transparent #53587a;
+    -fx-border-width: 1;
 }
 
 .split-pane {
     -fx-border-radius: 1;
     -fx-border-width: 1;
-    -fx-background-color: derive(#0D47A1, 20%);
+    -fx-background-color: derive(#4b86b4, 60%);
 }
 
 .split-pane:vertical .split-pane-divider {
-    -fx-background-color: derive(#0D47A1, 20%);
-    -fx-border-width: 1;
+    -fx-background-color: #a4a5ab;
+    -fx-border-width: 2;
 }
 
 .list-view {
     -fx-background-insets: 0;
     -fx-padding: 0;
+    -fx-background-color: #e8fffc
 }
 
 .list-cell {
@@ -113,11 +115,11 @@
 }
 
 .list-cell:filled:even {
-    -fx-background-color: #303F9F;
+    -fx-background-color: #718ea8;
 }
 
 .list-cell:filled:odd {
-    -fx-background-color: #3F51B5;
+    -fx-background-color: #2c537a;
 }
 
 .list-cell:filled:selected {
@@ -145,23 +147,25 @@
     -fx-text-fill: #010504;
 }
 
+/*Command box inner*/
 .anchor-pane {
-     -fx-background-color: derive(#0D47A1, 20%);
+     -fx-background-color: derive(#FFFFFF, 20%);
 }
 
+/*Result display outer and command box outer */
 .pane-with-border {
-     -fx-background-color: derive(#0D47A1, 20%);
+     -fx-background-color: #5092a8;
      -fx-border-color: derive(#0D47A1, 10%);
      -fx-border-top-width: 1px;
 }
 
 .status-bar {
-    -fx-background-color: derive(#0D47A1, 20%);
+    -fx-background-color: derive(#FFFFFF, 20%);
     -fx-text-fill: black;
 }
 
 .result-display {
-    -fx-background-color: transparent;
+    -fx-background-color: #427873;
     -fx-font-family: "Segoe UI Light";
     -fx-font-size: 13pt;
     -fx-text-fill: white;
@@ -169,6 +173,7 @@
 
 .result-display .label {
     -fx-text-fill: black !important;
+    -fx-background-color: #427873;
 }
 
 .status-bar .label {
@@ -204,15 +209,16 @@
     -fx-text-fill: white;
 }
 
+/* Menu bar at top */
 .menu-bar {
-    -fx-background-color: derive(#0D47A1, 20%);
+    /*-fx-background-color: derive(#1f3f5e, 20%);*/
+    -fx-background-color: linear-gradient(to right, #2c537a ,#a2d9e1);
 }
 
 .menu-bar .label {
     -fx-font-size: 14pt;
     -fx-font-family: "Segoe UI Light";
     -fx-text-fill: white;
-    -fx-opacity: 0.9;
 }
 
 .menu .left-container {
@@ -223,7 +229,7 @@
  * Metro style Push Button
  * Author: Pedro Duque Vieira
  * http://pixelduke.wordpress.com/2012/10/23/jmetro-windows-8-controls-on-java/
- */
+
 .button {
     -fx-padding: 5 22 5 22;
     -fx-border-color: #e2e2e2;
@@ -292,13 +298,13 @@
     -fx-fill: white;
     -fx-text-fill: white;
 }
-
+*/
 .scroll-bar {
-    -fx-background-color: derive(#0D47A1, 20%);
+    -fx-background-color: #38647a;
 }
 
 .scroll-bar .thumb {
-    -fx-background-color: derive(#0D47A1, 50%);
+    -fx-background-color: derive(#38647a, 50%);
     -fx-background-insets: 3;
 }
 
@@ -337,19 +343,14 @@
     -fx-border-width: 1;
     -fx-font-family: "Arial";
     -fx-font-size: 13pt;
-    -fx-text-fill: white;
+    -fx-text-fill: black;
 }
 
 #filterField, #personListPanel, #personWebpage {
     -fx-effect: innershadow(gaussian, black, 10, 0, 0, 0);
 }
-
+/*
 #resultDisplay .content {
-    -fx-background-color: transparent, #283593, transparent, #283593;
-    -fx-background-radius: 0;
-}
-
-#commandBoxHelper .content {
     -fx-background-color: transparent, #283593, transparent, #283593;
     -fx-background-radius: 0;
 }
@@ -366,16 +367,16 @@
     -fx-border-radius: 2;
     -fx-background-radius: 2;
     -fx-font-size: 11;
-}
+} */
 
 #browserSelectorList .list-cell:even {
     -fx-padding: 8,0,0,8;
-    -fx-background-color: #283593;
+    -fx-background-color: #718ea8;
 }
 
 #browserSelectorList .list-cell:odd {
     -fx-padding: 8,0,0,8;
-    -fx-background-color: #283593;
+    -fx-background-color: #2c537a;
 }
 
 .list-cell:filled:selected #browserCardPane {
@@ -386,16 +387,28 @@
 
 #themeSelectorList .list-cell:even {
     -fx-padding: 8,0,0,8;
-    -fx-background-color: #283593;
+    -fx-background-color: #718ea8;
 }
 
 #themeSelectorList .list-cell:odd {
     -fx-padding: 8,0,0,8;
-    -fx-background-color: #283593;
+    -fx-background-color: #2c537a;
 }
 
 .list-cell:filled:selected #themeCardPane {
     -fx-border-color: palegreen;
     -fx-border-width: 2;
     -fx-border-radius: 7 7 7 7;
+}
+
+#browserPlaceholder {
+    -fx-background-color: derive(#718ea8,50%);
+}
+
+#browserStack {
+    -fx-background-color: #a4a5ab;
+}
+
+#browser {
+    -fx-background-color: derive(#718ea8,50%);
 }
