--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -38,7 +38,7 @@
                     <Insets bottom="5" left="10" right="10" top="5" />
                 </padding>
             </StackPane>
-            <StackPane fx:id="commandBoxHelperPlaceholder" maxWidth="300.0" prefHeight="150.0" prefWidth="300.0" StackPane.alignment="CENTER_RIGHT">
+            <StackPane fx:id="commandBoxHelperPlaceholder" maxWidth="300.0" StackPane.alignment="CENTER_RIGHT">
                 <padding>
                     <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
                 </padding></StackPane>
