--- a/src/main/resources/view/StatusBarFooter.fxml
+++ b/src/main/resources/view/StatusBarFooter.fxml
@@ -10,8 +10,10 @@
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="100" />
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="100" />
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="100" />
+    <ColumnConstraints hgrow="SOMETIMES" minWidth="10" prefWidth="100" />
   </columnConstraints>
   <StatusBar styleClass="anchor-pane" fx:id="syncStatus" />
-  <Label styleClass="anchor-pane" fx:id="displayClock" GridPane.columnIndex="1" nodeOrientation="RIGHT_TO_LEFT" />
-  <StatusBar styleClass="anchor-pane" fx:id="saveLocationStatus" GridPane.columnIndex="2" nodeOrientation="RIGHT_TO_LEFT" />
+  <Label styleClass="anchor-pane" fx:id="displayDate" GridPane.columnIndex="1" nodeOrientation="RIGHT_TO_LEFT" />
+  <Label styleClass="anchor-pane" fx:id="displayClock" GridPane.columnIndex="2" nodeOrientation="RIGHT_TO_LEFT" />
+  <StatusBar styleClass="anchor-pane" fx:id="saveLocationStatus" GridPane.columnIndex="3" nodeOrientation="RIGHT_TO_LEFT" />
 </GridPane>
