--- a/src/main/resources/view/SplashScreen.fxml
+++ b/src/main/resources/view/SplashScreen.fxml
@@ -19,8 +19,8 @@
           <RowConstraints maxHeight="0.0" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <ImageView fx:id="SplashImage" fitHeight="123.0" fitWidth="460.0" pickOnBounds="true" preserveRatio="true" />
-            <ImageView fx:id="SplashLoadingImage" fitHeight="20.0" fitWidth="90.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+            <ImageView fx:id="splashImage" fitHeight="123.0" fitWidth="460.0" pickOnBounds="true" preserveRatio="true" />
+            <ImageView fx:id="splashLoadingImage" fitHeight="20.0" fitWidth="90.0" pickOnBounds="true" preserveRatio="true" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="CENTER">
                <image>
                   <Image url="@../images/SplashScreenLoading.png" />
                </image>
