changed colour of text box and added front page logo

--- a/src/main/resources/view/default.html
+++ b/src/main/resources/view/default.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="BlueTheme.css">
+    <link rel="stylesheet" href="DarkTheme.css">
 </head>
 
 <body class="background">
+<p style="text-align:center;">
+    <img src="../images/TheClassroomLogo.png" alt="The Classroom Logo" style="width:870px;height:750px;" />
+</p>
 </body>
 </html>
