--- a/src/main/resources/view/BrightTheme.css
+++ b/src/main/resources/view/BrightTheme.css
@@ -426,3 +426,30 @@
     -fx-font-family: "Segoe UI Light";
     -fx-font-size: 16pt;
 }
+
+#highpriority .label {
+    -fx-text-fill: white;
+    -fx-background-color: red;
+    -fx-padding: 1 1 1 1;
+    -fx-border-radius: 1;
+    -fx-background-radius: 1;
+    -fx-font-size: 11;
+}
+
+#mediumpriority .label {
+    -fx-text-fill: white;
+    -fx-background-color: orange;
+    -fx-padding: 1 1 1 1;
+    -fx-border-radius: 1;
+    -fx-background-radius: 1;
+    -fx-font-size: 11;
+}
+
+#lowpriority .label {
+    -fx-text-fill: white;
+    -fx-background-color: green;
+    -fx-padding: 1 1 1 1;
+    -fx-border-radius: 1;
+    -fx-background-radius: 1;
+    -fx-font-size: 11;
+}
