--- a/src/main/resources/view/EventListPanel.fxml
+++ b/src/main/resources/view/EventListPanel.fxml
@@ -7,13 +7,14 @@
 <?import javafx.scene.text.Font?>
 
 <!-- @@author HouDenghao -->
-<VBox style="-fx-background-color: dodgerblue; -fx-background-radius: 18;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
-   <Label fx:id="title" contentDisplay="CENTER" text="\$title" style="-fx-text-fill: white; -fx-font-size: 18">
+
+<VBox style="-fx-background-color: #99CCFF; -fx-background-radius: 18;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+   <Label fx:id="title" contentDisplay="CENTER" style="-fx-text-fill: white; -fx-font-size: 18" text="\$title">
       <VBox.margin>
          <Insets left="20.0" />
       </VBox.margin>
       <font>
          <Font size="18.0" />
       </font></Label>
-  <ListView fx:id="eventListView" style="-fx-background-color: dodgerblue; -fx-background-radius: 18px;" VBox.vgrow="ALWAYS" />
+  <ListView fx:id="eventListView" style="-fx-background-color: #99CCFF; -fx-background-radius: 18px;" VBox.vgrow="ALWAYS" />
 </VBox>
