--- a/src/main/resources/view/PersonListPanel.fxml
+++ b/src/main/resources/view/PersonListPanel.fxml
@@ -6,10 +6,10 @@
 <?import javafx.scene.layout.VBox?>
 
 <!-- @@author HouDenghao -->
-<VBox style="-fx-background-color: #dd2200; -fx-background-radius: 18px;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<VBox style="-fx-background-color: #FF7676; -fx-background-radius: 18px;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <Label fx:id="title" contentDisplay="CENTER" text="\$title" style="-fx-text-fill: white; -fx-font-size: 18">
       <VBox.margin>
          <Insets left="20.0" />
       </VBox.margin></Label>
-  <ListView fx:id="personListView" style="-fx-background-color: #dd2200; -fx-background-radius: 18px;" VBox.vgrow="ALWAYS" />
+  <ListView fx:id="personListView" style="-fx-background-color: #FF7676; -fx-background-radius: 18px;" VBox.vgrow="ALWAYS" />
 </VBox>
