--- a/src/main/resources/view/ExtendDetailsPerson.fxml
+++ b/src/main/resources/view/ExtendDetailsPerson.fxml
@@ -9,15 +9,15 @@
 
 <!-- @@author wishingmaid -->
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-image: images/Night.jpg;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <Circle fx:id="circle" fill="#bfcbd7" radius="46.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" translateX="60.0" translateY="20.0" />
       <Line endX="100.0" startX="-100.0" stroke="#176fb2" strokeWidth="2.0" translateY="32.0" />
-      <Label fx:id="name" text="-" translateX="25.0" translateY="35.0" wrapText="true">
+      <Label fx:id="name" translateX="25.0" translateY="35.0" wrapText="true">
          <graphic>
             <ImageView fx:id="nameIcon" fitHeight="10.0" fitWidth="10.0" pickOnBounds="true" preserveRatio="true" />
          </graphic></Label>
-      <Label fx:id="phone" text="-" translateX="20.0" translateY="35.0">
+      <Label fx:id="phone" translateX="20.0" translateY="35.0">
          <graphic>
             <ImageView fx:id="phoneIcon" fitHeight="16.0" fitWidth="15.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -25,7 +25,7 @@
                </image>
             </ImageView>
          </graphic></Label>
-      <Label fx:id="address" prefWidth="240.0" text="-" translateX="20.0" translateY="35.0" wrapText="true">
+      <Label fx:id="address" prefWidth="240.0" translateX="20.0" translateY="35.0" wrapText="true">
          <graphic>
             <ImageView fx:id="addressIcon" fitHeight="17.0" fitWidth="15.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -33,7 +33,7 @@
                </image>
             </ImageView>
          </graphic></Label>
-      <Label fx:id="email" prefWidth="240.0" text="-" translateX="20.0" translateY="35.0" wrapText="true">
+      <Label fx:id="email" prefWidth="240.0" translateX="20.0" translateY="35.0" wrapText="true">
          <graphic>
             <ImageView fx:id="emailIcon" fitHeight="16.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -41,7 +41,7 @@
                </image>
             </ImageView>
          </graphic></Label>
-      <Label fx:id="remark" prefWidth="240.0" text="-" translateX="20.0" translateY="35.0" wrapText="true">
+      <Label fx:id="remark" prefWidth="240.0" translateX="20.0" translateY="35.0" wrapText="true">
          <graphic>
             <ImageView fx:id="remarkIcon" fitHeight="15.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -49,7 +49,7 @@
                </image>
             </ImageView>
          </graphic></Label>
-      <Label fx:id="birthday" prefWidth="240.0" text="-" translateX="20.0" translateY="35.0" wrapText="true">
+      <Label fx:id="birthday" prefWidth="240.0" translateX="20.0" translateY="35.0" wrapText="true">
          <graphic>
             <ImageView fx:id="birthdayIcon" fitHeight="16.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -57,7 +57,7 @@
                </image>
             </ImageView>
          </graphic></Label>
-      <Label fx:id="age" prefWidth="240.0" text="-" translateX="20.0" translateY="40.0">
+      <Label fx:id="age" prefWidth="240.0" translateX="20.0" translateY="40.0">
          <graphic>
             <ImageView fx:id="ageIcon" fitHeight="17.0" fitWidth="19.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -65,5 +65,10 @@
                </image>
             </ImageView>
          </graphic></Label>
+      <ImageView fx:id="background" fitHeight="408.0" fitWidth="231.0" opacity="0.16" pickOnBounds="true" preserveRatio="true" rotate="18.4" scaleX="3.0" scaleY="5.0" translateY="-200.0">
+         <image>
+            <Image url="@../images/night.jpg" />
+         </image>
+      </ImageView>
    </children>
 </VBox>
