--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -394,14 +394,14 @@
 
 #displayDate {
     -fx-font-family: 'Nova Square';
-    -fx-font-size: 30;
+    -fx-font-size: 25;
     -fx-text-fill: white;
 }
 
 #displayTime {
-    -fx-min-width: 200;
+    -fx-padding: 0 150 0 0;
     -fx-font-family: 'Digital-7 Italic';
-    -fx-font-size: 65;
+    -fx-font-size: 50;
     -fx-text-fill: white;
 }
 
