--- a/src/main/resources/view/ScheduleCardHeaders.css
+++ b/src/main/resources/view/ScheduleCardHeaders.css
@@ -1,6 +1,6 @@
 /*@@author 17navasaw*/
 .headers {
-    -fx-text-fill: red;
+    -fx-text-fill: #f7d0af;
     -fx-font-style: italic;
     -fx-font-size: 14pt;
     -fx-font-family: "Comic Sans MS";
