Attemp to increase test coverage

--- a/src/main/resources/view/PersonListCard.fxml
+++ b/src/main/resources/view/PersonListCard.fxml
@@ -45,7 +45,11 @@
      <items>
        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="50.0" prefWidth="50.0" stylesheets="@LightTheme.css">
          <children>
-           <ImageView fx:id="favourite" fitHeight="30" fitWidth="30" preserveRatio="true" AnchorPane.topAnchor="10"/>
+               <Label fx:id="favourite" alignment="TOP_RIGHT" text="">
+                  <graphic>
+                 <ImageView fx:id="favouriteIcon" fitHeight="30" fitWidth="30" preserveRatio="true" />
+                  </graphic>
+               </Label>
          </children>
        </AnchorPane>
        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="50.0" prefWidth="158.0">
